deployments/pathweb/deluge/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  selector:
    matchLabels:
      app: myapp
  serviceName: <ServiceName>
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: lscr.io/linuxserver/deluge:2.1.1
        ports:
        - containerPort: 8112
          name: webui
        - containerPort: 6881
          name: bittorrent
        - containerPort: 6881
          name: bittorrent
          protocol: UDP
        - containerPort: 58846
          name: daemon
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
